--- a/package.json
+++ b/package.json
@@ -6,19 +6,38 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "analyze": "ANALYZE=true next build",
+    "db:studio": "prisma studio",
+    "seed": "node prisma/seed.js"
   },
   "dependencies": {
+  "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^6.14.0",
+    "@tanstack/react-query": "^5.85.5",
+    "@trpc/client": "^11.4.4",
+    "@trpc/next": "^11.4.4",
+    "@trpc/react-query": "^11.4.4",
+    "@trpc/server": "^11.4.4",
+    "bcryptjs": "^2.4.3",
+    "framer-motion": "^12.23.12",
     "next": "15.4.4",
+    "next-auth": "^4.24.11",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "react-intersection-observer": "^9.16.0",
+    "zod": "^4.0.17"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/node": "24.3.0",
+    "@types/react": "19.1.10",
     "eslint": "^9",
     "eslint-config-next": "15.4.4",
-    "tailwindcss": "^4"
+    "prisma": "^6.14.0",
+    "tailwindcss": "^4",
+    "typescript": "5.9.2"
   }
 }
